Overflow bug of a long MD file. #157

--- a/app/renderer/css/index.css
+++ b/app/renderer/css/index.css
@@ -133,3 +133,8 @@ ol {
 #detail-markdown-preview a {
   text-decoration: underline;
 }
+
+#detail-markdown-preview img {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
